--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS; Database=AuthenticationDb; Trusted_Connection=True;"
+    "DefaultConnection": "Server=.; Database=AuthenticationDb; Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
